# Agentic-Ai

./: 01_hello_agent.ipynb  Ai_Agents.ipynb  Litellm_agent_sdk.ipynb  OPENAI_SDK_OPENROUTER.ipynb  streaming.ipynb  streaming_OpenAi.ipynb
AI Resume Analyzer/AI-Resume-Analyzer/: main.py  pyproject.toml
AI Resume Analyzer/AI-Resume-Analyzer/ai_resume_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Interactive Map Explorer/Interactive-Map-Explorer/: main.py
Personal AI Nutritionist/Your-Personal-AI-Nutritionist/: main.py  nutritrackai.db  pyproject.toml  requirements.txt
Personal AI Nutritionist/Your-Personal-AI-Nutritionist/auth/: login.py  register.py
Personal AI Nutritionist/Your-Personal-AI-Nutritionist/core/: diet_plan.py  meal.py  payment.py  report.py
Personal AI Nutritionist/Your-Personal-AI-Nutritionist/db/: __init__.py  database.py  models.py
Secure-Data-Encryption-system/: main.py  pyproject.toml
Traffic-Sign-Classifier/: main.py  pyproject.toml  traffic_sign_model.h5
agent,task,flow/project/: pyproject.toml
agent,task,flow/project/src/project/: main.py
agent,task,flow/project/src/project/Crews/Config/: agents.yaml  tasks.yaml
agent,task,flow/project/src/project/Crews/teaching_crew/: teaching_crew.py
hello_fastAPI/hello-fastapi/: pyproject.toml
my-project1/: pyproject.toml
my-project1/src/my_project1/: __init__.py
