[project]
name = "my-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AhmedRaza", email = "sheikhahlhmed670@gmail.com.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-project1 = "my_project1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
