[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AhmedRaza", email = "sheikhahlhmed670@gmail.com.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.0",
]

[project.scripts]
project = "project:main"
panaflow = "project.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
